# palpo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY_A1.md  README.md  README.zh.md  TASK_A1_VERIFICATION.md  TASK_A3_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TESTING_GUIDE_zh.md  TOML_EDITOR_IMPLEMENTATION.md  _improve.md  _upstreams.md  deny.toml  init.sh  palpo-example.kdl  palpo-example.toml  palpo-required.kdl  palpo-required.toml  test_api.fish
.github/: dependabot.yml
.github/workflows/: audit.yml  complement.yml  miri.yml  quality-control.yml  release-binaries.yml  release-docker-images.yml
crates/admin-server/: Cargo.toml
crates/admin-server/src/: device_repository.rs  lib.rs  main.rs  matrix_admin_creation.rs  matrix_auth_service.rs  media_repository.rs  migration_service.rs  migrations.rs  palpo_client.rs  palpo_client_tests.rs  password_generator.rs  rate_limit_repository.rs  repositories.rs  schema.rs  server_config.rs  server_control.rs  server_status.rs  session_manager.rs  session_repository.rs  shadow_ban_repository.rs  threepid_repository.rs  types.rs  user_migrations.rs  user_repository.rs  webui_auth_service.rs
crates/admin-server/src/handlers/: audit_logger.rs  auth_middleware.rs  device_handler.rs  matrix_admin.rs  media_handler.rs  mod.rs  rate_limit_handler.rs  server_config.rs  server_control.rs  server_status.rs  session_handler.rs  shadow_ban_handler.rs  threepid_handler.rs  user_handler.rs  validation.rs  webui_admin.rs
crates/admin-server/tests/: integration_audit_logging.rs  integration_concurrent_operations.rs  integration_database_transactions.rs  integration_device_token_invalidation.rs  integration_frontend_user_creation.rs  integration_frontend_user_list.rs  integration_password_reset.rs  integration_permission_validation.rs  integration_user_lifecycle.rs  matrix_admin_dependency_test.rs  matrix_admin_privileges_test.rs  migration_idempotence_test.proptest-regressions  migration_idempotence_test.rs  password_change_flow_test.rs  password_change_invalidation_test.proptest-regressions  password_change_invalidation_test.rs  password_generator_comprehensive_test.rs  password_generator_tests.rs  property_audit_log_completeness.rs  property_pagination_consistency.proptest-regressions  property_pagination_consistency.rs  property_rate_limit_roundtrip.rs  property_user_palpo_api.rs  property_username_availability.proptest-regressions  property_username_availability.rs  server_config_endpoints_test.rs  server_control_endpoints_test.rs  server_control_idempotence_test.rs  test_quality_bugfix_exploration.rs  test_quality_preservation.rs  types_comprehensive_test.rs  validation_comprehensive_test.rs
crates/admin-ui/: CONFIG_FEEDBACK_TESTS.md  Cargo.toml  DEVELOPMENT.md  Dioxus.toml  FRONTEND_TESTING_STATUS.md  LAYOUT_COMPONENTS_SUMMARY.md  Makefile  README.md  SEARCH_FILTER_TESTS.md  TASK_1_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  UI_TESTING_FINAL_SUMMARY.md  USELESS_TEST_ANALYSIS.md  fix_doctests.py  tailwind.config.js  useless_test.md
crates/admin-ui/.cargo/: config.toml
crates/admin-ui/assets/: tailwind.css
crates/admin-ui/examples/: api_client_demo.rs
crates/admin-ui/proptest-regressions/middleware/: auth.txt
crates/admin-ui/scripts/: build.sh  check.sh  clean.sh  dev.sh  test.sh
crates/admin-ui/src/: app.rs  lib.rs  main.rs
crates/admin-ui/src/components/: LAYOUT_IMPLEMENTATION.md  README.md  TEST_SUMMARY.md  UI_COMPONENT_TESTING.md  dialogs.rs  examples.rs  feedback.rs  forgot_password_modal.rs  forms.rs  layout.rs  layout_README.md  layout_example.rs  loading.rs  mod.rs  toml_editor.rs
crates/admin-ui/src/hooks/: mod.rs  use_auth.rs  use_config.rs  use_error.rs
crates/admin-ui/src/middleware/: audit.rs  auth.rs  mod.rs
crates/admin-ui/src/models/: appservice.rs  audit.rs  auth.rs  config.rs  device.rs  error.rs  federation.rs  media.rs  mod.rs  pusher.rs  room.rs  server.rs  session.rs  user.rs  validation.rs
crates/admin-ui/src/pages/: appservices.rs  config.rs  config_feedback_test.rs  config_import_export.rs  config_mode_switcher.rs  config_search_test.rs  config_template.rs  config_toml_editor.rs  dashboard.rs  federation.rs  login.rs  logs.rs  matrix_admin_create.rs  media.rs  mod.rs  password_change.rs  room_detail.rs  rooms.rs  server_commands.rs  server_control.rs  server_status.rs  setup.rs  user_detail.rs  user_management_test.rs  user_media_stats.rs  users.rs
crates/admin-ui/src/services/: api_client.rs  api_client_test.rs  appservice_admin_api.rs  audit.rs  audit_api.rs  auth.rs  config.rs  config_api.rs  config_api_test.rs  config_import_export_api.rs  config_template_api.rs  federation_admin_api.rs  media_admin_api.rs  mod.rs  room_admin_api.rs  server_control_api.rs  user_admin_api.rs  user_admin_api_test.rs  webui_auth_api.rs
crates/admin-ui/src/utils/: audit_logger.rs  fs_compat.rs  mod.rs  validation.rs
crates/admin-ui/tests/: E2E_TEST_MANUAL.md  README.md  config_form_editor_tests.rs  config_import_export_tests.rs  e2e_admin_server_health.sh  e2e_palpo_health.sh  e2e_server_control.sh  e2e_server_control_comprehensive.sh  e2e_user_management.sh  integration_user_form.rs  integration_user_list.rs  run_all_e2e_tests.sh  toml_editor_tests.rs  toml_validation_tests.rs
crates/core/: Cargo.toml
crates/data/: Cargo.toml
crates/server/: Cargo.toml  palpo.kdl  palpo.toml
deploy/docker/: compose.with-caddy.yml  compose.with-traefik.yml  compose.yml  palpo.kdl  palpo.toml
docs/api/: default-admin-account-api.md
docs/user-guide/: default-admin-account-guide.md
examples/with-dingtalk/: README.md  compose.yml  config.example.yaml
examples/with-discord/: .env.example  README.md  compose.yml  config.example.yaml  palpo.toml
examples/with-feishu/: README.md  compose.yml  config.example.yaml  palpo.kdl  palpo.toml
examples/with-savfox/: compose.yml  palpo.toml
examples/with-telegram/: README.md  compose.yml  palpo.kdl  palpo.toml
migrations/: 001_create_webui_admin_credentials.sql  001_create_webui_admin_credentials_down.sql
tests/: complement-mixed-federation.sh
(+630 files in other folders)
