[package]
name = "palpo-admin-server"
description = "Admin server for Palpo Matrix server - provides Web UI authentication and server control"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["sysinfo"]
sysinfo = ["dep:sysinfo"]

[dependencies]
palpo-data = { workspace = true }

anyhow = { workspace = true }
rust-argon2 = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
hex = "0.4"
once_cell = "1.20"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
salvo = { workspace = true, features = ["logging", "oapi", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true, features = ["display"] }
reqwest = { workspace = true }
urlencoding = "2.1"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4"] }
serde_yaml = "0.9"
sysinfo = { version = "0.33", optional = true }

[dev-dependencies]
futures = "0.3"
proptest = { workspace = true }
salvo = { workspace = true, features = ["test"] }

[lints]
workspace = true
