[package]
name = "palpo-admin-ui"
version = "0.1.0"
edition = "2021"
description = "Web admin interface for Palpo Matrix server configuration and management"
authors = ["Palpo Team"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Palpo dependencies
palpo-core = { path = "../core" }

# Frontend dependencies (Dioxus)
dioxus = { version = "0.5", features = ["web"] }
dioxus-router = "0.5"
dioxus-hooks = "0.5"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.0"
toml = "0.8"
regex = "1.0"

[features]
default = []