[package]
name = "palpo-admin-ui"
version = "0.1.0"
edition = "2021"
description = "Web admin interface for Palpo Matrix server configuration and management"
authors = ["Palpo Team"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Frontend dependencies (Dioxus)
dioxus = { version = "0.5", features = ["web"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "Storage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "AbortController",
    "AbortSignal",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }
toml = "0.8"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["fs", "time"] }

[features]
default = []