[package]
name = "palpo-admin-ui"
version = "0.1.0"
edition = "2021"
description = "Web admin interface for Palpo Matrix server configuration and management"
authors = ["Palpo Team"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# 明确指定测试在native环境运行
[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"
required-features = ["test-utils"]

[dependencies]
# Frontend dependencies (Dioxus)
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-router = "0.7"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Navigator",
    "Clipboard",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2" }
toml = "0.8"
serde_yaml = "0.9"
base64 = "0.21"
rand = { version = "0.8", features = ["getrandom"] }
regex.workspace = true

# Conditional dependencies for different targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-compatible async runtime
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"  # For HTTP requests in WASM
gloo-storage = "0.3"  # For local storage in WASM
gloo-timers = { version = "0.3", features = ["futures"] }  # For timers in WASM
getrandom = { version = "0.2", features = ["js"] }  # WASM random support

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native dependencies
tokio = { version = "1.0", features = ["fs", "macros", "rt", "time"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
wasm-bindgen-test = "0.3"
# For tests, we need tokio even on WASM target
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
proptest = "1.4"

[features]
default = []
test-utils = []
